--- a/filebrowser/docker-compose.yml
+++ b/filebrowser/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     user: "1000:1000"
     container_name: filebrowser
     ports:
-      - "8010:80"
+      - "8010:8080"
     #environment:
       #- FB_BASEURL:/filebrowser
     security_opt:
@@ -13,6 +13,7 @@ services:
     restart: unless-stopped
     volumes:
       - "/opt:/data"
+      - "/opt/data-docker/volumes/filebrowser/config/settings.json:/config/settings.json"
       - "/opt/data-docker/volumes/filebrowser/config:/config"
       - "/home:/data/home/"
 
