--- a/uptime-kuma/docker-compose.yml
+++ b/uptime-kuma/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: louislam/uptime-kuma:latest
     container_name: uptime-kuma
     user: "1000:1000"
-    restart: always
+    restart: unless-stopped
     ports:
       - "8080:3001"
     volumes:
