--- a/uptime-kuma/docker-compose.yml
+++ b/uptime-kuma/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   uptime-kuma:
     image: louislam/uptime-kuma:latest
     container_name: uptime-kuma
-    user: "1000:1000"
+    #user: "1000:1000"
     restart: unless-stopped
     ports:
       - "8080:3001"
