--- a/heimdall/docker-compose.yml
+++ b/heimdall/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     image: lscr.io/linuxserver/heimdall:latest
     container_name: heimdall
     restart: unless-stopped
+    ports:
+      - "8100:80"
+      - "9100:443"
     environment:
       - PUID=1000
       - PGID=1000
