--- a/ngnix-proxy/docker-compose.yml
+++ b/ngnix-proxy/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       DB_MYSQL_HOST: "db_ngnix"
       DB_MYSQL_PORT: 3306
       DB_MYSQL_USER: "${NG_USER}"
-      DB_MYSQL_PASSWORD_FILE: run/secrets/DB_MYSQL_PWD
+      DB_MYSQL_PASSWORD__FILE: run/secrets/DB_MYSQL_PWD
       DB_MYSQL_NAME: "${NG_DB}"
       DISABLE_IPV6: 'true'
     depends_on:
@@ -38,10 +38,10 @@ services:
     container_name: db_ngnix
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD_FILE: run/secrets/DB_ROOT_PWD
+      MYSQL_ROOT_PASSWORD__FILE: run/secrets/DB_ROOT_PWD
       MYSQL_DATABASE: "${NG_DB}"
       MYSQL_USER: "${NG_USER}"
-      MYSQL_PASSWORD_FILE: run/secrets/DB_MYSQL_PWD
+      MYSQL_PASSWORD__FILE: run/secrets/DB_MYSQL_PWD
     volumes:
       - "/opt/data-adm-docker/volumes/mysql_ngnix:/var/lib/mysql"
     secrets:
@@ -54,7 +54,7 @@ services:
       - db_ngnix
     environment:
       ADMINER_DEFAULT_SERVER: db_ngnix
-      MYSQL_ROOT_PASSWORD_FILE: run/secrets/DB_ROOT_PWD
+      MYSQL_ROOT_PASSWORD__FILE: run/secrets/DB_ROOT_PWD
     secrets:
       - DB_ROOT_PWD
     restart: unless-stopped
