--- a/ngnix-proxy/docker-compose.yml
+++ b/ngnix-proxy/docker-compose.yml
@@ -1,4 +1,5 @@
-version: '3.9'
+version: '3.7'
+
 secrets:
   DB_ROOT_PWD:
     file: /opt/data-etc/ngnix/db_root_pwd.secret.txt
@@ -20,7 +21,7 @@ services:
       DB_MYSQL_HOST: "db_ngnix"
       DB_MYSQL_PORT: 3306
       DB_MYSQL_USER: "${NG_USER}"
-      DB_MYSQL_PASSWORD_FILE: run/secrets/DB_MYSQL_PWD
+      DB_MYSQL_PASSWORD__FILE: run/secrets/DB_MYSQL_PWD
       DB_MYSQL_NAME: "${NG_DB}"
       DISABLE_IPV6: 'true'
     depends_on:
