--- a/ngnix-proxy/my.cnf
+++ b/ngnix-proxy/my.cnf
@@ -1,13 +1,10 @@
-# This group is read both both by the client and the server
-# use it for options that affect everything
-[client-server]
-
-# This group is read by the server
 [mysqld]
-default_time_zone='America/New_York'
-
-# Disabling symbolic-links is recommended to prevent assorted security risks
+skip-innodb
+default-storage-engine=Aria
+default-tmp-storage-engine=Aria
+innodb=OFF
 symbolic-links=0
-
-# include all files from the config directory
-!includedir /etc/my.cnf.d
+log-output=file
+skip-host-cache
+skip-name-resolve
+default_time_zone='America/New_York'
