--- a/ngnix-proxy/Dockerfile
+++ b/ngnix-proxy/Dockerfile
@@ -1,2 +1,3 @@
 FROM jc21/mariadb-aria:latest
-COPY my.cnf /etc/mysql/my.cnf
+#COPY my.cnf /etc/mysql/my.cnf
+COPY timezone.cnf /etc/mysql/conf.d/timezone.cnf
