--- a/ngnix-proxy/my.cnf
+++ b/ngnix-proxy/my.cnf
@@ -7,4 +7,4 @@ symbolic-links=0
 log-output=file
 skip-host-cache
 skip-name-resolve
-default_time_zone='America/New_York'
+default_time_zone='America/Montreal'
