--- a/heimdall/docker-compose.yml
+++ b/heimdall/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - "8100:80"
       - "9100:443"
     environment:
-      - PUID=1000
-      - PGID=1000
-      - TZ=America/Montreal
+      PUID: 1000
+      PGID: 1000
+      TZ: America/Montreal
     volumes:
       - "/opt/data-docker/volumes/heimdall/config:/config"
