--- a/apps/firefly/docker-compose.yml
+++ b/apps/firefly/docker-compose.yml
@@ -30,8 +30,8 @@ services:
       FILE__MYSQL_USER: /run/secrets/MYSQL_USER
       FILE__MYSQL_PASSWORD: /run/secrets/MYSQL_PASSWORD
       TZ: "America/Montreal"
-      PUID: 1000
-      PGID: 1000
+      #PUID: 1000
+      #PGID: 1000
     volumes:
       - "/opt/data-docker/volumes/mariadb:/config"
     secrets:
@@ -51,6 +51,7 @@ services:
   firefly:
     image: fireflyiii/core:latest
     restart: unless-stopped
+
     depends_on:
       - db
       - redis
@@ -64,12 +65,13 @@ services:
       APP_DEBUG: false
       DEFAULT_LANGUAGE: en_US
       DEFAULT_LOCALE: equal
+      SITE_OWNER: admin@firefly.ui24.mywire.com
       TZ: "America/Montreal"
       TRUSTED_PROXIES: "**"
       APP_LOG_LEVEL: notice
       AUDIT_LOG_LEVEL: info
       DB_CONNECTION: mysql
-      DB_HOST: db
+      DB_HOST: "db"
       DB_PORT: 3306
       DB_DATABASE: firefly
       DB_USERNAME_FILE: /run/secrets/DB_USERNAME
@@ -80,6 +82,7 @@ services:
       REDIS_PORT: 6379
       REDIS_PASSWORD: yyccV9QUgbGhPWZ8fjXZnXMN3zT74az4
       # to check
+      REDIS_SCHEME: tcp
       REDIS_DB: "0"
       REDIS_CACHE_DB: "1"
       MAIL_MAILER: log
