--- a/apps/firefly/docker-compose.yml
+++ b/apps/firefly/docker-compose.yml
@@ -70,13 +70,13 @@ services:
     environment:
       APP_KEY_FILE: /run/secrets/APP_KEY
       APP_ENV: local
-      APP_DEBUG: true
+      APP_DEBUG: false
       DEFAULT_LANGUAGE: en_US
       DEFAULT_LOCALE: equal
       SITE_OWNER: admin@firefly.ui24.mywire.com
       TZ: "America/Montreal"
       TRUSTED_PROXIES: "**"
-      APP_LOG_LEVEL: debug
+      APP_LOG_LEVEL: notice
       AUDIT_LOG_LEVEL: info
       DB_CONNECTION: mysql
       DB_HOST_FILE: /run/secrets/DB_HOST
