config firefly iii

--- a/apps/firefly/docker-compose.yml
+++ b/apps/firefly/docker-compose.yml
@@ -27,8 +27,8 @@ services:
     image: mariadb:latest
     restart: unless-stopped
     container_name: firefly-db
-   # ports:
-      #- "3306"
+    ports:
+      - "3306"
     environment:
       MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: 'no'
       MARIADB_ROOT_HOST: firefly-db
@@ -53,8 +53,8 @@ services:
     command: redis-server --save 60 1 --loglevel warning --requirepass yyccV9QUgbGhPWZ8fjXZnXMN3zT74az4
     volumes:
       - cache:/data
-    #ports:
-      #- '6379'
+    ports:
+      - '6379'
 
   firefly:
     image: fireflyiii/core:latest
