--- a/apps/focalboard/docker-compose.yml
+++ b/apps/focalboard/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 services:
   focalboard:
     image: mattermost/focalboard
-    user: "1000:1000"
+    #user: "1000:1000"
     container_name: focalboard
     ports:
       - "7803:8000"
