--- a/apps/focalboard/docker-compose.yml
+++ b/apps/focalboard/docker-compose.yml
@@ -8,4 +8,5 @@ services:
       - "7803:8000"
     restart: unless-stopped
     volumes:
-      - "/opt/data-docker/volumes/focalboard:/data:rw"
+      - "/opt/data-docker/volumes/focalboard/data:/data"
+      - "/opt/data-docker/volumes/focalboard/data-opt:/opt/focalboard"
