--- a/apps/focalboard/docker-compose.yml
+++ b/apps/focalboard/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     container_name: focalboard
     ports:
       - "7803:8000"
+    depends_on:
+      - focalboard-db
     restart: unless-stopped
     volumes:
       - "/opt/data-docker/volumes/focalboard/data:/data"
@@ -25,7 +27,7 @@ services:
 
   focalboard-db:
     image: postgres:latest
-    container_name: focalboard-postgres
+    container_name: focalboard-db
     restart: unless-stopped
     volumes:
       - "/opt/data-docker/volumes/focalboard/postgresql:/var/lib/postgresql/data"
