--- a/docker/gitea/docker-compose.yml
+++ b/docker/gitea/docker-compose.yml
@@ -7,6 +7,7 @@ networks:
 services:
   db:
     image: postgres:14
+    container_name: db-gitea
     restart: unless-stopped
     environment:
       POSTGRES_USER: "${POSTGRES_USER}"
@@ -16,20 +17,29 @@ services:
     networks:
       - gitea
     volumes:
-      -
+      - "/opt/data-adm-docker/volumes/gitea/postgres:/var/lib/postgresql/data"
+
   gitea-server:
     image: gitea/gitea:latest
     container_name: gitea
+    restart: unless-stopped
+    depends_on:
+      - db
     environment:
-      - USER_UID=1000
-      - USER_GID=1000
-    restart: always
+      - USER_UID=1001
+      - USER_GID=1001
+      - GITEA__database__DB_TYPE=postgres
+      - GITEA__database__HOST=db-gitea:5432
+      - GITEA__database__NAME=${POSTGRES_DB}
+      - GITEA__database__USER=${POSTGRES_USER}
+      - GITEA__database__PASSWD=${POSTGRES_PASSWORD}
     networks:
       - gitea
     volumes:
-      - ./gitea:/data
+      - /opt/data-adm-docker/volumes/gitea/gitea-data:/data
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
+      - /home/git/.ssh/:/data/git/.ssh
     ports:
       - "3000:3000"
-      - "222:22"
+      - "127.0.0.1:2222:22"
