--- a/docker/gitea/docker-compose.yml
+++ b/docker/gitea/docker-compose.yml
@@ -9,7 +9,7 @@ secrets:
     file: /opt/data-etc/gitea/db_name.secret.txt
 
 networks:
-  gitea:
+  gitea-net:
     external: false
 
 services:
@@ -27,7 +27,7 @@ services:
       - POSTGRES_USER
       - POSTGRES_DB
     networks:
-      - gitea
+      - gitea-net
     volumes:
       - "/opt/data-adm-docker/volumes/gitea/postgres:/var/lib/postgresql/data"
 
@@ -48,7 +48,7 @@ services:
       - GITEA__database__USER=${POSTGRES_USER}
       - GITEA__database__PASSWD=${POSTGRES_PASSWORD}
     networks:
-      - gitea
+      - gitea-net
     volumes:
       - "/opt/data-adm-docker/volumes/gitea/gitea-data:/data"
       - "/etc/timezone:/etc/timezone:ro"
