--- a/docker/filebrowser/docker-compose.yml
+++ b/docker/filebrowser/docker-compose.yml
@@ -21,7 +21,7 @@ volumes:
     driver: "local"
     driver_opts:
       type: "nfs"
-      o: addr=192.168.20.41,rw,nfsvers=4
+      o: addr=192.168.20.41,rw,sync,no_subtree_check,insecure
       device: ":/srv/nfs04T01/my_data"
 
 
