--- a/docker/filebrowser/docker-compose.yml
+++ b/docker/filebrowser/docker-compose.yml
@@ -14,7 +14,11 @@ services:
       - "/opt/data-docker/volumes/filebrowser/config/settings.json:/config/settings.json"
       - "/opt/data-docker/volumes/filebrowser/config:/config"
       - "/home:/data/home/"
+      - "nfs01_mydata:/data/nfs01/my_data"
 
 
-
-
+volumes:
+  nfs01_mydata:
+    driver: nfs
+    driver_opts:
+      share: 192.168.20.41:/srv/nfs04T01/my_data
